# ondc-retail-b2b-buyer

./: .gitignore  .releaserc  Cargo.toml  Dockerfile  dev_run.sh  kill.sh  package-lock.json  package.json  readme.md  release.sh  reload.sh  restart.sh  test.rest
.github/workflows/: release.yaml
.sqlx/: query-010d1494278e6c0e84ff5fd44e2094eac1f64dd733a12642dc871ce3308c9664.json  query-05f14292ab78d896b8a5a9f59a576fa3e96087649737f67516a03b72246b1c3e.json  query-0a092bcce0125888f5ea7457c61552fda7f5d3ef06b3aa6e91e7206ed3469286.json  query-0a261c32674cf9e9cbad0fbfac08ad02a302b6524241d46d4d2ec7826fc5efdb.json  query-0aaa923aaf0fe8954b4f6ee31b927c7d81f1c0747daeafbc3e434bfbb72943b4.json  query-0c2d48d1bab263b5019b9c6a657da17bc547661cfeb76e1a5e0aa573ce05ec28.json  query-0f8b288cdc72dff6379b169d7338c33eda105a778f9335d670146eb48cdd5ac9.json  query-1259c426936004e5833d46c95323d8fe73a1748958be94598405afacee543b4f.json  query-16041fa99269722d2f44b6d43040614d1036a34993e70d46434d02cf388dc6d9.json  query-19a3db01597b219be48710c1c52e3970b440489e63378f0910533df04cebbd19.json  query-1a0a96164064eb7a8d7268180189b445131c132dee8f920109694e5bfa653961.json  query-1bbe125e7563e7fab26d1f793d5a4a98fbdf8218b198de93d6728eb181ff54d0.json  query-1bc766bdb6bb68898a71e5099cc6176e0c53c25fc1e8c57123056c9fbe6b4672.json  query-202a88715a806903b2a0a1f8ef4e7f9b9ff75b1bd6f04346872f607c73c6b1f8.json  query-2113c9a42ffd2e974f483bcab416f6402d29f2141d6610df372911de30b9d4e0.json  query-2256c5469ab327dd6beaa03e8ae369199caa6d8e0863e4a9e9d990659330ac41.json  query-2385ab6148f0cdbe5244ae7133d194983cbc064c95200a288f986d2db76c3263.json  query-24d3c01bf8aa2cc518996e984ee784a32b9670732344a1807a8c1f5f9918cac6.json  query-26efce19ff7884f769bc519daef55d48a195660d502edb057181c6bbd38e9abe.json  query-29582b38a824f390abcb497ab2573c4f1c948c2c0c8849cbe59a80ce253868ce.json  query-295944f30621198f8938f0ac21740df56e11b308d5e5135682269c3b8617d2d6.json  query-29f4a067d1b0ee5deef661c2415fb374d8ee7a2e522270350e4b544628428237.json  query-2a8516b44846afb4167cae8e44cd27cbbeb0d36b3ff196d7edcc73d772424847.json  query-2bf1e20bd4de269e16be2b0cabfce8dd9c565198d18a6acc61963efa7db8e822.json  query-2f8f290544c9fe16fa3167e7d95922b310075db3ca31ca3b6f9b8a78667a98b6.json  query-30642ff7b24825452e7e70f393d9c3ee88784ca5f4a58c8bcdf6818a665e0ab3.json  query-347e1cbd9e131fd4a5ec7caec1e5a100a95567d1ca9aab01f947ed8757b8f07a.json  query-38614dcaf48349775fc82ab4eda023a3062d650853ef9bf3a28eef3871184a23.json  query-3baf654508ff8e8e2a45cda5ef191b4e4c54ec6d52ef3b8298e037ac82c5c971.json  query-3be9f7218eef3d0e0795272670d1fb1c170d7b59b74d80b034c5cba962ea035b.json  query-3c86680d075fa7b7f0e3b73fb976cc81d91c0f52ebd644e66e38f59eb79a8424.json  query-3c94f8f767b15f221945f4c017782784da19ad186af05117639accd183434087.json  query-3d884cb17c679f70d7cac956903c16f641dfb76fd7f991fcec266665f9d6e3fd.json  query-4056ba9c39732acd032c826f0b9f4d701c7b586a9ace2b97082030edce16e6e6.json  query-4190ae0c0fc9d5119c908aac975f9cc12eaf039c1435123fe35da7f127b4021a.json  query-426c756b72b36dada2fd5899084169de729e59b9356cad2fd567c4dd2e904c87.json  query-436e4f8e95d39636324fcf57ff8f480d3e5b10c69291c43fb0d90e78e9416573.json  query-472920a3036aef0ec58ddfd6f438e1dd36d543f7f4ec766ecb60d0cf97b707b6.json  query-4829238ee1ebcb19d4ac49cc670f105f33859771e9b1e7bbfa457b0610d7565d.json  query-4963fb91b28c8b265c4d8789f8171759456e1fa969729badb5878e5df1e3ed97.json  (+104 more)
directory/: .rustc_info.json
migrations/: 001_migration.sql  002_insert.sql  002_inserts.sql  migration.sql
src/: chat_client.rs  commands.rs  configuration.rs  constants.rs  database.rs  elastic_search_client.rs  email_client.rs  errors.rs  general_utils.rs  kafka_client.rs  lib.rs  main.rs  middleware.rs  migration.rs  models.rs  openapi.rs  payment_client.rs  redis.rs  schemas.rs  session_state.rs  startup.rs  telemetry.rs  tests.rs  user_client.rs  utils.rs  websocket.rs  websocket_client.rs
src/commands/: main.rs  main1.rs  migration.rs  mod.rs
src/domain/: mod.rs  subscriber_email.rs
src/routes/: databases.rs  health_check.rs  mod.rs  route.rs  routes.rs
src/routes/notification/: errors.rs  handlers.rs  mod.rs  routes.rs  schemas.rs  utils.rs  views.rs
src/routes/ondc/: errors.rs  handlers.rs  middlewares.rs  mod.rs  routes.rs  schemas.rs  tests.rs  utils.rs
src/routes/ondc/buyer/: errors.rs  handlers.rs  middleware.rs  middlewares.rs  mod.rs  routes.rs  schemas.rs  tests.rs  utils.rs  views.rs
src/routes/ondc/seller/: errors.rs  mod.rs  routes.rs  views.rs
src/routes/order/: errors.rs  handlers.rs  mod.rs  models.rs  routes.rs  schemas.rs  tests.rs  utils.rs
src/routes/payment/: errors.rs  handlers.rs  mod.rs  models.rs  routes.rs  schemas.rs  utils.rs
src/routes/product/: errors.rs  handlers.rs  mod.rs  models.rs  routes.rs  schemas.rs  utils.rs  views.rs
src/routes/user/: errors.rs  handlers.rs  middlewares.rs  mod.rs  models.rs  routes.rs  schema.rs  schemas.rs  tests.rs  utils.rs  views.rs
src/routes/util/: handlers.rs  mod.rs  models.rs  routes.rs  utils.rs  views.rs
src/routes/utils/: mod.rs  routes.rs  schemas.rs  utils.rs  views.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs
