[package]
name = "ondc-retail-b2b-buyer"
version = "2.0.2"
authors = ["Sanu Shilshad <sanushilshad@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
actix-http =  "3.11.0"
anyhow = "1.0.98"
argon2 = { version = "0.5", default-features = false, features = ["std"] }
async-trait = "0.1.88"
bigdecimal = { version = "0.4.8", default-features = false, features = ["serde"] }
base64 = "0.22.1"
blake2 = "0.10.6"
chrono = { version = "0.4.41", features = ["serde"] }
config = { version = "0.15.11", features = ["yaml"] }
ed25519-dalek = {version="2.1.0"}
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4"
jsonwebtoken = "9.3.1"
lazy_static = "1.5"
lettre = { version = "0.11.17", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder", "pool", "tracing"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0" , features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
rand = { version = "0.9.1", features=["std_rng"] }
redis = { version = "0.32.0", features = ["tokio-comp"] }
regex = "1.11.1"
reqwest = { version = "0.12.18", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219"}
serde_json = { version = "1.0.140", default-features = false}
serde_with = "3.12.0"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "json", "bigdecimal"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2"
tracing-opentelemetry = {version="0.31.0"}
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
utoipa = {version="5.3.1", features=["actix_extras", "chrono"]}
utoipa-swagger-ui = {version ="9.0.2", features=["actix-web"]}
utoipauto = "0.2.0"
validator = {version="0.20.0", features = ["derive"]}
uuid = { version = "1.17.0", default-features = false, features = ["v4", "serde"] }
rdkafka = { version = "0.37", features = [ "ssl", "sasl", "cmake-build"] }
elasticsearch = "8.17.0-alpha.1"
geojson="0.24.2"
actix-cors = "0.7"

[dev-dependencies]
once_cell = "1.21.3"
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
# rand = "0.8.5"
dotenv="0.15.0"

[lib]
path="src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "ondc-retail-b2b-buyer"

[profile.release]
opt-level = 3 # 3 for release and 0 for dev
strip = "symbols"




